fixing overflow issue

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -17,6 +17,8 @@ body {
     flex-direction: column;
     align-items: stretch;
     word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: break-all;
 }
 
 br {
@@ -231,6 +233,9 @@ thead, th {
     background-color: #02033a;
     color: white;
     font-weight: 300;
+    word-wrap: normal;
+    overflow-wrap: normal;
+    word-break: normal;
 }
 
 tr{
@@ -394,9 +399,6 @@ body > #bloghome .entries {
     max-width: calc(90%);
     z-index: 0;
     transform: translateX(-25px);
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    word-break: break-all;
 }
 
 @media (max-width: 800px) {
